2006-02-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added a interface for node
	updating
	* src/ejabberd_update.erl: Added function update_info/0

2006-02-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* contrib/extract_translations/extract_translations.erl: Minor
	update (thanks to Sergei Golovan)

	* src/ejabberd_zlib/Makefile.win32: Zlib support for Windows build
	(thanks to Sergei Golovan)
	* src/Makefile.win32: Likewise
	* src/configure.erl: Likewise

2006-02-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_ctl.erl: Added API for virtual host specific
	commands, removed registered-users command
	* src/ejabberd_auth.erl: Added processing of registered-users
	command
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_app.erl: Added inititalization of ejabberd_ctl
	* src/ejabberd_sm.erl: Minor update

2006-02-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: Added handling for "%", "&"
	and "~" prefixes in IRC nicknames (thanks to Vladimir Kulev)

	* src/mod_irc/mod_irc_connection.erl: Added /msg and /ctcp
	commands, improved handling of channel topic and kick, mirc colors
	now filtered, other minor improvements (thanks to Oleg V. Motienko
	and Magnus Henoch)

	* src/mod_configure.erl: Improved strings (thanks to Sander
	Devrieze)
	* src/mod_vcard.erl: Likewise
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise
	* src/web/ejabberd_web_admin.erl: Likewise

2006-02-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_service_log.erl: Bugfix (thanks to Badlop)

	* src/jd2ejd.erl: Use mod_vcard_odbc if it is loaded (thanks to
	Tomasz Sterna)

2006-02-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: Added a few ejabberdctl commands
