@@ -1,3 +1,10 @@
+2006-03-04  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/ejabberd_logger_h.erl: reopen-log function now rename the log
+	file if it has not been already renamed by a logrotate process. This
+	change allow ejabberd administrators to rotate log files on Windows
+        (EJAB-52).
+
 2006-02-27  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/web/ejabberd_web_admin.erl: Added a interface for node
